Added initial implementation of editing/updating